# llm-bim

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  TEAM_STATUS.md  bootstrap.py  pyproject.toml
.github/workflows/: ci.yml  gemini-assist.yml
docs/: AGENT_SPEED.md  BUILDER_DESIGNER.md  CAPABILITY.md  CD_COMPLETENESS_STANDARD.md  DEPTH_PASSES.md  DESIGN.md  DIGITAL_TWIN_TRL.md  EQUIPMENT_3D_AND_DEVICE_SSOT.md  EXCELLENCE_AUDIT_2026-07-21.md  HONESTY.md  LAUNCH.md  LOCAL.md  MOBILE.md  OUTPUT_MATRIX.md  PR_PLAN.md  RETIRING_REVIT_SCHAD.md  SCHAD_REVIT_TO_LLMBIM_TRANSITION.md  VERSION_CONTROL.md  VISION.md  WORK_PACKAGES.md
docs/audit/: 2026-07-21-excellence-audit.json
examples/: README.md  __init__.py  intec_site.py  module_machine_host.py  multi_trade_catalog.py  plumbing_loop.py  proto10_separator.py  restroom_csi.py  schad_build.py  schad_garage.py  simple_house.py
notes/handoffs/: 2026-07-15-claude-brief.md  2026-07-15-grok.md  NOW.md  OVERSEER_LOG.md  OVERSEER_LOOP.md  VISION_LOOP.md
projects/schad/: __init__.py  bom_takeoff.py  build_construction_set.py  build_llmbim.py  build_notes_cd.py  engineering_package.py  generate_schad_docs.py  schad_adu.py  schad_design_basis.py  schad_details.py  schad_house_basis.py  schad_mep.py  schad_site.py  schad_structural.py  svg_detail.py  svg_plans.py
scripts/: chat_smoke.py  install_local.ps1  install_local.sh  verify_all.py  vision_overseer_check.py
skills/llm-bim/: SKILL.md  mcp.example.json  ops.schema.json
skills/llm-bim/recipes/: batch_ops.md  design_program.md  device_pack.md  explicit_build.md  hot_cell.md  import_anything.md  office.md  plumbing.md  restroom_csi.md  schad_cd.md
tests/fixtures/: device_pack_minimal.json
tests/unit/: test_api.py  test_auto_place.py  test_boq_coverage.py  test_builder_designer.py  test_cable_tray.py  test_cases_intec_proto10.py  test_cd_anatomy_graphics.py  test_cd_anatomy_plan.py  test_cd_anatomy_plan2.py  test_chat_path.py  test_cli_case_schad.py  test_cli_place.py  test_column.py  test_commands_undo.py  test_csi_locator.py  test_deliverables.py  test_depth_passes.py  test_detail_ops.py  test_device_pack.py  test_discipline_parity.py  test_door_fire_rating.py  test_drawing_sets.py  test_duct.py  test_dxf_elev.py  test_elements.py  test_elev_dims.py  test_elev_section_mep.py  test_fab_brep.py  test_fab_cut_revolve.py  test_foundations.py  test_gltf.py  test_gltf_textures.py  test_grid_labels.py  test_hvac_device_schedule.py  test_hvac_devices.py  test_ifc_mep.py  test_ifc_roundtrip.py  test_imperial_dims.py  test_level_drawing_list.py  test_machine_primitives.py  (+38 more)
tests/wp/: test_wp_drawings_acceptance.py  test_wp_ifc_acceptance.py
