[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llmbim"
version = "0.1.0a0"
description = "LLM-native Building Information Modeling — no human drafting UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM-BIM contributors" }]
keywords = ["bim", "ifc", "llm", "architecture", "mcp"]
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
ifc = [
  "ifcopenshell>=0.7.0",
]
mcp = [
  "mcp>=1.0.0",
]
drawings = [
  # SVG is stdlib/string-based in MVP; PDF optional later
]
all = [
  "llmbim[dev,ifc,mcp]",
]

[project.scripts]
llmbim = "llmbim_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/sdk/llmbim",
  "packages/core/llmbim_core",
  "packages/geometry/llmbim_geometry",
  "packages/drawings/llmbim_drawings",
  "packages/ifc/llmbim_ifc",
  "packages/mcp_server/llmbim_mcp",
  "packages/cli/llmbim_cli",
]

[tool.hatch.build.targets.sdist]
include = [
  "packages/",
  "docs/",
  "tests/",
  "examples/",
  "AGENTS.md",
  "TEAM_STATUS.md",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: skip sealed Claude work-package acceptance tests (keep main green).
# Claude runs: pytest -m wp_drawings   or   pytest -m wp_ifc
addopts = "-m \"not wp_drawings and not wp_ifc\""
markers = [
  "wp_drawings: sealed WP-DRAWINGS acceptance (Claude)",
  "wp_ifc: sealed WP-IFC acceptance (Claude)",
]
pythonpath = [
  "packages/sdk",
  "packages/core",
  "packages/geometry",
  "packages/drawings",
  "packages/ifc",
  "packages/mcp_server",
  "packages/cli",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["llmbim", "llmbim_core", "llmbim_geometry"]
mypy_path = [
  "packages/sdk",
  "packages/core",
  "packages/geometry",
]
