[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llmbim"
version = "0.1.0a0"
description = "LLM-native Building Information Modeling — no human drafting UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM-BIM contributors" }]
keywords = ["bim", "ifc", "llm", "architecture", "mcp"]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]
ifc = [
  "ifcopenshell>=0.7.0",
]
mcp = [
  "mcp>=1.0.0",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "mcp>=1.0.0",
]
all = [
  "llmbim[dev,ifc,mcp,server]",
]

[project.scripts]
llmbim = "llmbim_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/sdk/llmbim",
  "packages/core/llmbim_core",
  "packages/geometry/llmbim_geometry",
  "packages/drawings/llmbim_drawings",
  "packages/ifc/llmbim_ifc",
  "packages/mcp_server/llmbim_mcp",
  "packages/cli/llmbim_cli",
  "packages/server/llmbim_server",
]

[tool.hatch.build.targets.sdist]
include = [
  "packages/",
  "docs/",
  "tests/",
  "examples/",
  "AGENTS.md",
  "TEAM_STATUS.md",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# IFC stays optional; drawings acceptance now runs by default
addopts = "-m \"not wp_ifc\""
markers = [
  "wp_drawings: drawings acceptance",
  "wp_ifc: sealed WP-IFC acceptance (optional ifcopenshell)",
]
pythonpath = [
  "packages/sdk",
  "packages/core",
  "packages/geometry",
  "packages/drawings",
  "packages/ifc",
  "packages/mcp_server",
  "packages/cli",
  "packages/server",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["llmbim", "llmbim_core", "llmbim_geometry"]
mypy_path = [
  "packages/sdk",
  "packages/core",
  "packages/geometry",
]
