[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llmbim"
version = "0.1.0a0"
description = "LLM-native Building Information Modeling — no human drafting UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM-BIM contributors" }]
keywords = ["bim", "ifc", "llm", "architecture", "mcp"]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]
ifc = [
  "ifcopenshell>=0.7.0",
]
mcp = [
  "mcp>=1.0.0",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "mcp>=1.0.0",
]
# Fab-grade BREP + machine thread GD&T (OpenCascade via CadQuery)
fab = [
  "cadquery>=2.8",
  "cadquery-ocp>=7.7",
]
all = [
  "llmbim[dev,ifc,mcp,server,fab]",
]

[project.scripts]
llmbim = "llmbim_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/sdk/llmbim",
  "packages/core/llmbim_core",
  "packages/geometry/llmbim_geometry",
  "packages/drawings/llmbim_drawings",
  "packages/ifc/llmbim_ifc",
  "packages/mcp_server/llmbim_mcp",
  "packages/cli/llmbim_cli",
  "packages/server/llmbim_server",
  "packages/templates/llmbim_templates",
]
# Imagine studio textures for presentation 3D viewer
[tool.hatch.build.targets.wheel.force-include]
"packages/drawings/llmbim_drawings/assets" = "llmbim_drawings/assets"

[tool.hatch.build.targets.sdist]
include = [
  "packages/",
  "docs/",
  "tests/",
  "examples/",
  "AGENTS.md",
  "TEAM_STATUS.md",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Pure IFC SPF tests run by default; ifcopenshell optional inside tests
addopts = ""
markers = [
  "wp_drawings: drawings acceptance",
  "wp_ifc: IFC export acceptance",
]
pythonpath = [
  ".",
  "packages/sdk",
  "packages/core",
  "packages/geometry",
  "packages/drawings",
  "packages/ifc",
  "packages/mcp_server",
  "packages/cli",
  "packages/server",
  "packages/templates",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 (line length) is not enforced: the catalog modules carry intentionally
# wide data tables (pipe/fitting rows). The bug-catching rules (F, B, E7) are
# enforced in CI.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# tests routinely bind a result they only assert doesn't raise, and zip fixed
# pairs where length equality is guaranteed by construction.
"tests/**" = ["F841", "B905"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["llmbim", "llmbim_core", "llmbim_geometry"]
mypy_path = [
  "packages/sdk",
  "packages/core",
  "packages/geometry",
]
